* deprecations
  * Strategy#validate() no longer validates nil resources

== 2.1.0

Notes: https://github.com/plataformatec/devise/wiki/How-to:-upgrade-to-devise-2.1

* enhancements
  * Add `check_fields!(model_class)` method on Devise::Models to check if the model includes the fields that Devise uses
  * Add `skip_reconfirmation!` to skip reconfirmation
  * Devise model generator now works with engines
  * Devise encryptable was moved to its new gem (http://github.com/plataformatec/devise-encryptable)

* deprecations
  * Deprecations warnings added on Devise 2.0 are now removed with their features
  * All devise modules should now have a `required_fields(klass)` module method to help gathering missing attributes
  * `use_salt_as_remember_token` and `apply_schema` does not have any effect since 2.0 and are now deprecated
  * `valid_for_authentication?` must now return a boolean

* bug fix
  * Ensure after sign in hook is not called without a resource
  * Fix a term: now on Omniauth related flash messages, we say that we're authenticating from an omniauth provider instead of authorizing
  * Fixed redirect when authenticated mounted apps (by @hakanensari)
  * Ensure the failure app still respects config.relative_url_root
  * `/users/sign_in` doesn't choke on protected attributes used to select sign in scope (by @Paymium)
  * `failed_attempts` is set to zero after any sign in (including via reset password) (by @rodrigoflores)
  * Added token expiration on timeout (by @antiarchitect)
  * Do not accidentally mark `_prefixes` as private
  * Better support for custom strategies on test helpers (by @mattconnolly)
  * Return `head :no_content` in SessionsController now that most JS libraries handle it (by @julianvargasalvarez)

== 2.0.4

Notes: https://github.com/plataformatec/devise/wiki/How-To:-Upgrade-to-Devise-2.0

* bug fix
  * Fix when :host is used with devise_for  (by @mreinsch)
  * Fix a regression that caused Warden to be initialized too late

== 2.0.3 (yanked)
